#ifndef ASSIGNMENT12_ISTATE_H
#define ASSIGNMENT12_ISTATE_H

class IState
{
  public:
    virtual void processTurn() = 0;
};

#endif // ASSIGNMENT12_ISTATE_H
